# option_analyzer

./: .coverage  .env.example  .gitignore  LICENSE  RATE_LIMITING_PLAN.md  README.md  plan.md  pyproject.toml
.beads/: issues.jsonl
src/option_analyzer/: __main__.py  config.py
src/option_analyzer.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/option_analyzer/api/: __init__.py  app.py  dependencies.py  middleware.py  schemas.py
src/option_analyzer/api/routes/: health.py  stocks.py  strategy.py
src/option_analyzer/clients/: __init__.py  cache.py  ibkr.py
src/option_analyzer/models/: domain.py  session.py
src/option_analyzer/services/: __init__.py  risk.py  session.py  statistics.py
src/option_analyzer/utils/: exceptions.py  plotting.py  rate_limiter.py
static/: index.html
static/css/: components.css  layout.css  theme.css
static/js/: api.js  app.js  dom.js  errors.js  formatting.js  state.js
static/js/components/: analysis.js  option-chain.js  position-manager.js  symbol-input.js
tests/: conftest.py
tests/e2e/: conftest.py
tests/integration/: test_api_workflow.py
tests/performance/: test_bootstrap.py
tests/unit/: test_api_endpoints.py  test_app_infrastructure.py  test_cache.py  test_ibkr.py  test_ibkr_error_handling.py  test_models.py  test_plotting.py  test_rate_limiter.py  test_risk.py  test_session.py  test_statistics.py
